# slimlog

./: .clang-format  .clang-tidy  .cmake-format  .codecov.yml  .gitignore  .iwyu-mappings  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml  test-report.yml
cmake/: CMakeDocumentation.cmake  CMakeFormatting.cmake  ClangCodeFormatting.cmake  CodeFormatting.cmake  CodeSanitizer.cmake  CodeSanitizing.cmake  CppCodeFormatting.cmake  DoxygenDocumentation.cmake  FindASan.cmake  FindCMakeFormat.cmake  FindClangFormat.cmake  FindClangTidy.cmake  FindCppcheck.cmake  FindGcov.cmake  FindGcovr.cmake  FindIWYU.cmake  FindIwyu.cmake  FindLSan.cmake  FindLlvmCov.cmake  FindMSan.cmake  FindTSan.cmake  FindUBSan.cmake  GcovrCodeCoverage.cmake  Helpers.cmake  RecursiveCleanup.cmake  SanitizeHelpers.cmake  StaticCodeAnalysis.cmake
docs/: Doxyfile.in
include/: logger.h  pattern.h  policy.h  sink.h  util.h
include/log/: format.h  level.h  location.h  logger.h  pattern.h  policy.h  record.h  sink.h
include/log/sinks/: console_sink.h  dummy_sink.h  file_sink.h  ostream_sink.h  qt_sink.h  stringview_sink.h
include/sinks/: dummy_sink.h  file_sink.h  ostream_sink.h
include/slimlog/: common.h  format-inl.h  format.h  level.h  location.h  logger-inl.h  logger.h  pattern-inl.h  pattern.h  policy.h  record-inl.h  record.h  sink-inl.h  sink.h  threading.h
include/slimlog/integration/: qt.h
include/slimlog/sinks/: callback_sink-inl.h  callback_sink.h  dummy_sink.h  file_sink-inl.h  file_sink.h  null_sink-inl.h  null_sink.h  ostream_sink-inl.h  ostream_sink.h  qt_sink.h
include/slimlog/util/: buffer.h  locale.h  os.h  string.h  types.h  unicode.h
include/util/: buffer.h  locale.h  memory_buffer.h  os.h  stack_allocator.h  stack_allocator_new.h  types.h  unicode.h
src/: CMakeLists.txt  main.cpp  slimlog.cpp
test/: .clang-tidy  CMakeLists.txt  basic.cpp  basics.cpp  buffer.cpp  file_reader.h  hierarchy.cpp  multithread.cpp  output_capturer.h  pattern.cpp  record.cpp  strings.cpp  unicode.cpp
test/helpers/: common.h  file_capturer.h  file_reader.h  output_capturer.h  stream_capturer.h  string_reader.h
